--- a/src/styles/base/_variables.css
+++ b/src/styles/base/_variables.css
@@ -7,6 +7,12 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_skins.cs
 
 */
 
+/* Breakpoints (adjust to match tailwind.js) */
+@custom-media --sm (min-width: 36em);
+@custom-media --md (min-width: 48em);
+@custom-media --lg (min-width: 62em);
+@custom-media --xl (min-width: 75em);
+
 :root {
 
   /* Type scale */
@@ -97,29 +103,29 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_skins.cs
   --white-025: rgba(255,255,255,.025);
   --white-0125: rgba(255,255,255,.0125);
 
-  --dark-red:  #e7040f;
-  --red:  #ff4136;
-  --light-red:  #ff725c;
-  --orange:  #ff6300;
-  --gold:  #ffb700;
-  --yellow:  #ffd700;
-  --light-yellow:  #fbf1a9;
-  --purple:  #5e2ca5;
-  --light-purple:  #a463f2;
-  --dark-pink:  #d5008f;
+  --dark-red: #e7040f;
+  --red: #ff4136;
+  --light-red: #ff725c;
+  --orange: #ff6300;
+  --gold: #ffb700;
+  --yellow: #ffd700;
+  --light-yellow: #fbf1a9;
+  --purple: #5e2ca5;
+  --light-purple: #a463f2;
+  --dark-pink: #d5008f;
   --hot-pink: #ff41b4;
-  --pink:  #ff80cc;
-  --light-pink:  #ffa3d7;
-  --dark-green:  #137752;
-  --green:  #19a974;
-  --light-green:  #9eebcf;
-  --navy:  #001b44;
-  --dark-blue:  #00449e;
-  --blue:  #357edd;
-  --light-blue:  #96ccff;
-  --lightest-blue:  #cdecff;
-  --washed-blue:  #f6fffe;
-  --washed-green:  #e8fdf5;
-  --washed-yellow:  #fffceb;
-  --washed-red:  #ffdfdf;
+  --pink: #ff80cc;
+  --light-pink: #ffa3d7;
+  --dark-green: #137752;
+  --green: #19a974;
+  --light-green: #9eebcf;
+  --navy: #001b44;
+  --dark-blue: #00449e;
+  --blue: #357edd;
+  --light-blue: #96ccff;
+  --lightest-blue: #cdecff;
+  --washed-blue: #f6fffe;
+  --washed-green: #e8fdf5;
+  --washed-yellow: #fffceb;
+  --washed-red: #ffdfdf;
 }
