--- a/src/styles/utilities/_font-family.css
+++ b/src/styles/utilities/_font-family.css
@@ -36,6 +36,7 @@ code,
 
 .avenir    { font-family: 'avenir next', avenir, sans-serif }
 .helvetica { font-family: 'helvetica neue', helvetica, sans-serif }
+.raleway   { font-family: Raleway, sans-serif }
 
 /*
  *
