--- a/src/styles/utilities/_font-size.css
+++ b/src/styles/utilities/_font-size.css
@@ -9,7 +9,7 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_type-sca
 
 @variants responsive, hover, focus {
 
-.f1            { font-size: var(--font-size-1) }
+  .f1            { font-size: var(--font-size-1) }
   .f2            { font-size: var(--font-size-2) }
   .f3            { font-size: var(--font-size-3) }
   .f4            { font-size: var(--font-size-4) }
@@ -23,5 +23,6 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_type-sca
 
   .f-headline    { font-size: var(--font-size-headline) }
   .f-subheadline { font-size: var(--font-size-subheadline) }
+  .f-lead        { font-size: 1.125rem }
 
 }
