--- a/src/styles/utilities/_overflow.css
+++ b/src/styles/utilities/_overflow.css
@@ -23,6 +23,7 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_overflow
 .overflow-y-auto    { overflow-y: auto }
 
 /* Scrolling */
+.scroll-smooth      { scroll-behavior: smooth }
 .scrolling-touch    { -webkit-overflow-scrolling: touch }
 
 .hide-scrollbar {
