Added Reveal component powered by GSAP (loaded async from the CDN)

--- a/src/styles/builds/after-purgecss/output.css
+++ b/src/styles/builds/after-purgecss/output.css
@@ -509,6 +509,82 @@ a,
 ul { -webkit-tap-highlight-color: rgba(0,0,0,0) }
 */
 
+/* 
+
+See: https://github.com/ten1seven/what-input
+
+*/
+
+/*
+ *
+ * Focus management
+ *
+ */
+
+/* Remove default focus outline ONLY if user is not navigating by keyboard  */
+
+[data-whatintent="mouse"] *:focus,
+[data-whatintent="touch"] *:focus,
+html:not([data-whatinput="keyboard"]) *:focus {
+  outline: none;
+}
+
+/*
+
+Optionally, set custom focus styles (not necessarily recommended)
+
+*/
+
+/* Set custom focus styles */
+
+/* a:active,
+a:focus,
+button:active,
+button:focus,
+input:active,
+input:focus,
+select:active,
+select:focus,
+textarea:active,
+textarea:focus {
+  box-shadow: 0 0 0 3px orange !important;
+  outline: none !important;
+} */
+
+/* Remove custom focus styles for mouse users */
+
+/* [data-whatintent="mouse"] a:active,
+[data-whatintent="mouse"] a:focus,
+[data-whatintent="mouse"] button:active,
+[data-whatintent="mouse"] button:focus,
+[data-whatintent="mouse"] input:active,
+[data-whatintent="mouse"] input:focus,
+[data-whatintent="mouse"] select:active,
+[data-whatintent="mouse"] select:focus,
+[data-whatintent="mouse"] textarea:active,
+[data-whatintent="mouse"] textarea:focus { box-shadow: none !important } */
+
+/* 
+ *
+ * Screen reader
+ *
+ */
+
+/* See: https://css-tricks.com/small-tweaks-can-make-huge-impact-websites-accessibility/#article-header-id-5 */
+
+.visually-hidden {
+  display: block;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(1px);
+          clip-path: inset(1px);
+  white-space: nowrap;
+  position: absolute;
+}
+
 /*
 
 @font-face {
@@ -537,7 +613,9 @@ ul { -webkit-tap-highlight-color: rgba(0,0,0,0) }
  *
  */
 
-/* @import './plugins/react-slick.css'; */
+/* @import '../../node_modules/slick-carousel/slick/slick.css'; */
+
+/* @import './plugins/react-slick'; */
 
 /*
  *
@@ -617,6 +695,17 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
  * Icons
  *
  */
+
+.icon {
+  -webkit-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.icon:hover,
+.icon:focus {
+  color: #19a974;
+}
 
 /* 
  *
@@ -775,6 +864,10 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_skins.cs
 
 .bg-black {
   background-color: #000;
+}
+
+.bg-red {
+  background-color: #ff4136;
 }
 
 /*
@@ -1139,6 +1232,10 @@ Adapted from: http://tachyons.io/docs/layout/position/
 
 /* Negative spacing */
 
+/* Percentage spacing */
+
+/* Negative percentage spacing */
+
 /*
 
 Z-INDEX
@@ -1345,6 +1442,10 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
 
 .pa3 {
   padding: 1rem;
+}
+
+.pa6 {
+  padding: 8rem;
 }
 
 /* Top */
@@ -1679,6 +1780,10 @@ Adapted from:
 
 */
 
+.visible {
+  visibility: visible;
+}
+
 /*
 
 Text that is hidden but accessible - see: http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
@@ -1726,7 +1831,7 @@ Adapted from: http://tachyons.io/docs/debug-grid/
 
 */
 
-/* @import './utilities/_debug'; */
+/* @import './utilities/debug'; */
 
 @media (min-width: 36em) {/* Resets *//* Resets *//* Resets *//*
   .hover-shadow:focus,
@@ -1799,7 +1904,7 @@ Adapted from: http://tachyons.io/docs/debug-grid/
   *
   * Flex item
   *
-  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* 
+  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* Percentage spacing *//* Negative percentage spacing *//* 
   * 
   * Percentage of parent height
   *
@@ -1965,7 +2070,7 @@ See:  https://stackoverflow.com/questions/35351706/how-to-render-a-multi-line-te
   *
   * Flex item
   *
-  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* 
+  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* Percentage spacing *//* Negative percentage spacing *//* 
   * 
   * Percentage of parent height
   *
@@ -2131,7 +2236,7 @@ See:  https://stackoverflow.com/questions/35351706/how-to-render-a-multi-line-te
   *
   * Flex item
   *
-  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* 
+  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* Percentage spacing *//* Negative percentage spacing *//* 
   * 
   * Percentage of parent height
   *
@@ -2297,7 +2402,7 @@ See:  https://stackoverflow.com/questions/35351706/how-to-render-a-multi-line-te
   *
   * Flex item
   *
-  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* 
+  *//* 1. Fix for Chrome 44 bug. See: https://code.google.com/p/chromium/issues/detail?id=506893 *//* Positive spacing *//* Negative spacing *//* Percentage spacing *//* Negative percentage spacing *//* 
   * 
   * Percentage of parent height
   *
