Try fixing schema.org validation errors

--- a/src/styles/base/_a11y.css
+++ b/src/styles/base/_a11y.css
@@ -55,14 +55,14 @@ textarea:focus {
  */
 
 /* See: https://css-tricks.com/small-tweaks-can-make-huge-impact-websites-accessibility/#article-header-id-5 */
-.visually-hidden { 
+.sr-only { 
   display: block;
-  height: 1px;
-  width: 1px;
+  position: absolute;
   overflow: hidden;
   clip: rect(1px 1px 1px 1px);
   clip: rect(1px, 1px, 1px, 1px);
   clip-path: inset(1px);
+  height: 1px;
+  width: 1px;
   white-space: nowrap;
-  position: absolute;
 }
