--- a/src/styles/utilities/_border-style.css
+++ b/src/styles/utilities/_border-style.css
@@ -9,7 +9,7 @@ Adapted from: http://tachyons.io/docs/themes/borders/
 
 */
 
-@variants responsive, hover, focus {
+@variants responsive, hover, focus, group-hover {
 
   .b--dashed { border-style: dashed }
   .b--dotted { border-style: dotted }
