--- a/src/styles/utilities/_rotation.css
+++ b/src/styles/utilities/_rotation.css
@@ -7,7 +7,7 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_rotation
 
 */
 
-@variants responsive, hover, focus {
+@variants responsive, hover, focus, group-hover {
 
   .rotate-45  { transform: rotate(45deg) }
   .rotate-90  { transform: rotate(90deg) }
