--- a/src/styles/base/_variables.css
+++ b/src/styles/base/_variables.css
@@ -34,6 +34,7 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_skins.cs
   --spacing-5: 4rem;
   --spacing-6: 8rem;
   --spacing-7: 16rem;
+  --spacing-8: 32rem;
 
   /* Sizing scale */
   --sizing-1: 1rem;
