--- a/src/styles/components/components.css
+++ b/src/styles/components/components.css
@@ -13,7 +13,7 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 .btn { 
   @apply .bw1 .b--black .bg-black .pink .pv2 .ph3 .lh-solid .ttu .tracked .animate;
 
-  &:hover, &:focus { @apply .bg-pink .black }
+  &:hover { @apply .bg-pink .black }
 
   @media (--sm) { @apply .f4 }
  }
@@ -51,13 +51,13 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 .icon { 
   @apply .animate;
 
-  &:hover, &:focus { @apply .green }
+  &:hover { @apply .green }
 }
 
 .icon-on-green { 
   @apply .animate;
 
-  &:hover, &:focus {
+  &:hover {
     @apply .white;
     filter: drop-shadow( 0px 15px 5px rgba(0, 0, 0, 0.11) )
   }
@@ -74,11 +74,11 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   @apply .shadow-lg .bw1 .b--black .bg-black .pv2 .ph3 .lh-tall .ttu .tracked .white .animate;
   border-radius: 30px;
 
-  &:hover, &:focus { @apply .b--pink .bg-pink .black }
+  &:hover { @apply .b--pink .bg-pink .black }
 }
 
 .link-white {
-  &:hover, &:focus { @apply .b--white .bg-white .black }
+  &:hover { @apply .b--white .bg-white .black }
 }
 
 .link-inline { 
@@ -87,11 +87,5 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
   border-bottom: 1px solid var(--pink);
   box-shadow: inset 0 -2px 0px 0px var(--pink);
 
-  &:hover, &:focus { box-shadow: inset 0 -12px 0px 0px var(--pink) }
+  &:hover { box-shadow: inset 0 -12px 0px 0px var(--pink) }
 }
-
-/* 
- *
- * Sections
- *
- */
