--- a/src/styles/utilities/_margins.css
+++ b/src/styles/utilities/_margins.css
@@ -18,6 +18,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .ma5 { margin: var(--spacing-5) }
   .ma6 { margin: var(--spacing-6) }
   .ma7 { margin: var(--spacing-7) }
+  .ma8 { margin: var(--spacing-8) }
 
   /* Top */
   .mt0 { margin-top: 0 }
@@ -28,6 +29,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .mt5 { margin-top: var(--spacing-5) }
   .mt6 { margin-top: var(--spacing-6) }
   .mt7 { margin-top: var(--spacing-7) }
+  .mt8 { margin-top: var(--spacing-8) }
 
   /* Right */
   .mr0     { margin-right: 0 }
@@ -38,6 +40,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .mr5     { margin-right: var(--spacing-5) }
   .mr6     { margin-right: var(--spacing-6) }
   .mr7     { margin-right: var(--spacing-7) }
+  .mr8     { margin-right: var(--spacing-8) }
   .mr-auto { margin-right: auto }
 
   /* Bottom */
@@ -49,6 +52,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .mb5 { margin-bottom: var(--spacing-5) }
   .mb6 { margin-bottom: var(--spacing-6) }
   .mb7 { margin-bottom: var(--spacing-7) }
+  .mb8 { margin-bottom: var(--spacing-8) }
 
   /* Left */
   .ml0     { margin-left: 0 }
@@ -59,6 +63,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .ml5     { margin-left: var(--spacing-5) }
   .ml6     { margin-left: var(--spacing-6) }
   .ml7     { margin-left: var(--spacing-7) }
+  .ml8     { margin-left: var(--spacing-8) }
   .ml-auto { margin-left: auto }
 
   /* Vertical (top + bottom) */
@@ -102,6 +107,11 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
     margin-bottom: var(--spacing-7);
   }
 
+  .mv8  {
+    margin-top: var(--spacing-8);
+    margin-bottom: var(--spacing-8);
+  }
+
   /* Horizontal (left + right) */
   .center { margin-right: auto; margin-left: auto }
 
@@ -143,6 +153,11 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .mh7  {
     margin-left: var(--spacing-7);
     margin-right: var(--spacing-7);
+  }
+
+  .mh8  {
+    margin-left: var(--spacing-8);
+    margin-right: var(--spacing-8);
   }
 
 }
