--- a/src/styles/utilities/_padding.css
+++ b/src/styles/utilities/_padding.css
@@ -18,6 +18,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .pa5 { padding: var(--spacing-5) }
   .pa6 { padding: var(--spacing-6) }
   .pa7 { padding: var(--spacing-7) }
+  .pa8 { padding: var(--spacing-8) }
 
   /* Top */
   .pt0 { padding-top: 0 }
@@ -28,6 +29,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .pt5 { padding-top: var(--spacing-5) }
   .pt6 { padding-top: var(--spacing-6) }
   .pt7 { padding-top: var(--spacing-7) }
+  .pt8 { padding-top: var(--spacing-8) }
 
   /* Right */
   .pr0 { padding-right: 0 }
@@ -38,6 +40,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .pr5 { padding-right: var(--spacing-5) }
   .pr6 { padding-right: var(--spacing-6) }
   .pr7 { padding-right: var(--spacing-7) }
+  .pr8 { padding-right: var(--spacing-8) }
 
   /* Bottom */
   .pb0 { padding-bottom: 0 }
@@ -48,6 +51,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .pb5 { padding-bottom: var(--spacing-5) }
   .pb6 { padding-bottom: var(--spacing-6) }
   .pb7 { padding-bottom: var(--spacing-7) }
+  .pb8 { padding-bottom: var(--spacing-8) }
 
   /* Left */
   .pl0 { padding-left: 0 }
@@ -58,6 +62,7 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .pl5 { padding-left: var(--spacing-5) }
   .pl6 { padding-left: var(--spacing-6) }
   .pl7 { padding-left: var(--spacing-7) }
+  .pl8 { padding-left: var(--spacing-8) }
 
   /* Vertical (top + bottom) */
   .pv0 {
@@ -100,6 +105,11 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
     padding-bottom: var(--spacing-7);
   }
 
+  .pv8 {
+    padding-top: var(--spacing-8);
+    padding-bottom: var(--spacing-8);
+  }
+
   /* Horizontal (left + right) */
   .ph0 {
     padding-left: 0;
@@ -139,6 +149,11 @@ Adapted from: http://tachyons.io/docs/layout/spacing/
   .ph7 {
     padding-left: var(--spacing-7);
     padding-right: var(--spacing-7);
+  }
+
+  .ph8 {
+    padding-left: var(--spacing-8);
+    padding-right: var(--spacing-8);
   }
 
 }
